Added basic navigation between the main components

--- a/src/app/pm-portal/header/header.component.html
+++ b/src/app/pm-portal/header/header.component.html
@@ -14,27 +14,27 @@
       </li>
 
       <li class="nav-item">
-        <a routerLink="{{projectsUrl}}" class="nav-link" routerLinkActive="active">Tasks</a>
+        <a routerLink="/projects/tasks" class="nav-link" routerLinkActive="active">Tasks</a>
       </li>
 
       <li class="nav-item">
-        <a routerLink="/task-deps" class="nav-link" routerLinkActive="active">Dependencies</a>
+        <a routerLink="/projects/task-deps" class="nav-link" routerLinkActive="active">Dependencies</a>
       </li>
 
       <li class="nav-item">
-        <a routerLink="/users" class="nav-link" routerLinkActive="active">Users</a>
+        <a routerLink="/projects/users" class="nav-link" routerLinkActive="active">Users</a>
       </li>
 
       <li class="nav-item">
-        <a routerLink="/chats" class="nav-link" routerLinkActive="active">Chats</a>
+        <a routerLink="/projects/chats" class="nav-link" routerLinkActive="active">Chats</a>
       </li>
 
       <li class="nav-item">
-        <a routerLink="/mentions" class="nav-link" routerLinkActive="active">Mentions</a>
+        <a routerLink="/projects/mentions" class="nav-link" routerLinkActive="active">Mentions</a>
       </li>
 
       <li class="nav-item">
-        <a routerLink="/analysis" class="nav-link" routerLinkActive="active">Analysis</a>
+        <a routerLink="/projects/analysis" class="nav-link" routerLinkActive="active">Analysis</a>
       </li>
 
     </ul>
