--- a/src/app/pm-portal/tasks/tasks.component.html
+++ b/src/app/pm-portal/tasks/tasks.component.html
@@ -1,1 +1,12 @@
-<p>tasks works!</p>
+<div class="row">
+
+    <div class="col-md-5">
+        <app-tasks-list></app-tasks-list>
+    </div>
+
+    <div class="col-md-7">
+        <app-task-details></app-task-details>
+    </div>
+
+</div>
+
