--- a/src/app/pm-portal/pm-portal.component.html
+++ b/src/app/pm-portal/pm-portal.component.html
@@ -5,8 +5,6 @@
     <br>
     <h6 style="text-align: center;">{{title}}</h6>
   
-    <!-- <router-outlet></router-outlet> -->
-
-    <p>pm-portal works!</p>
+    <router-outlet></router-outlet>
 
 </div>
