--- a/src/app/pm-portal/tasks/task-details/task-details.component.html
+++ b/src/app/pm-portal/tasks/task-details/task-details.component.html
@@ -1,1 +1,25 @@
-<p>task-details works!</p>
+<div class="row">
+
+    <div class="col-md-12">
+        <a routerLink="/projects/tasks/details" class="nav-link" routerLinkActive="active">Details</a>
+        <a routerLink="/projects/tasks/add" class="nav-link" routerLinkActive="active">Add</a>
+        <a routerLink="/projects/tasks/edit/1" class="nav-link" routerLinkActive="active">Edit 1</a>
+    </div>
+
+</div>
+
+<div class="row">
+
+    <div class="col-md-12">
+        <router-outlet></router-outlet>
+    </div>
+
+</div>
+
+<div class="row">
+
+    <div class="col-md-12">
+        <app-task-events-list></app-task-events-list>
+    </div>
+
+</div>
