--- a/src/app/pm-portal/tasks/tasks-list/tasks-list.component.html
+++ b/src/app/pm-portal/tasks/tasks-list/tasks-list.component.html
@@ -1,1 +1,17 @@
-<p>tasks-list works!</p>
+<!-- <div class="row">
+    <span>
+        <a routerLink="/projects/tasks/add" class="nav-link" routerLinkActive="active">Add Task</a>
+    </span>
+</div> -->
+
+<!-- <span class="float-right"><a routerLink="/projects/tasks/add" class="nav-link" routerLinkActive="active">Add Task</a></span> -->
+
+<div class="row">
+    <div class="col-xs-12">
+        <app-tasks-list-item 
+            *ngFor="let currentTask of tasks | async" 
+            [taskItem]="currentTask"
+            >
+        </app-tasks-list-item>
+    </div>
+</div>
