--- a/src/app/pm-portal/chats/chats.component.html
+++ b/src/app/pm-portal/chats/chats.component.html
@@ -22,7 +22,7 @@
             <form class="form-inline">
                 <div class="form-group">
                     <label for="name">Message</label>
-                    <input type="text" [(ngModel)]="name" class="form-control" name="name"> <br>
+                    <input type="text" [(ngModel)]="message" class="form-control" name="message"> <br>
                 </div>
                 <button (click)="sendMessage()" class="btn btn-warning" type="submit" [disabled]="!isConnected">Send</button>
             </form>
