Added Dhtmlx Gannt Chart

--- a/src/app/pm-portal/tasks/task-details/task-item-detail/task-item-detail.component.html
+++ b/src/app/pm-portal/tasks/task-details/task-item-detail/task-item-detail.component.html
@@ -15,7 +15,7 @@
 
     <div class="row" >
         <div class="col-md-12">
-            <h5>{{currentTask.title}}</h5>
+            <h5>{{currentTask.text}}</h5>
         </div>
     </div>
 
