--- a/src/app/pm-portal/tasks/tasks-list/tasks-list-item/tasks-list-item.component.html
+++ b/src/app/pm-portal/tasks/tasks-list/tasks-list-item/tasks-list-item.component.html
@@ -9,6 +9,6 @@
     </span>
     
     <div class="float-left">
-        <h6 class="list-group-item-heading">{{taskItem.title}}</h6>
+        <h6 class="list-group-item-heading">{{taskItem.text}}</h6>
     </div>
 </a>
