--- a/src/app/pm-portal/pm-portal.component.html
+++ b/src/app/pm-portal/pm-portal.component.html
@@ -3,7 +3,7 @@
 
 <div class="container">
     <br>
-    <h6 style="text-align: center;">{{title}}</h6>
+    <!-- <h6 style="text-align: center;">{{title}}</h6> -->
   
     <router-outlet></router-outlet>
 
