--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,9 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-md-6 col-md-offset-3">
+
+            <app-alert [message]="errorMessage" *ngIf="errorMessage" (close)="onHandleError()"></app-alert>
+
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 
                 <div class="form-group" *ngIf="!isLoginMode">
