--- a/src/app/pm-portal/chats/chats.component.html
+++ b/src/app/pm-portal/chats/chats.component.html
@@ -1,30 +1,26 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
 <noscript><h2 style="color: #ff0000">
     Seems your browser doesn't support Javascript! Websocket relies on Javascript being
     enabled. Please enable Javascript and reload this page!</h2>
 </noscript>
 
 <div id="main-content" class="container">
-  
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-2">
             <form class="form-inline">
                 <div class="form-group">
-                    <label for="connect">WebSocket connection:</label>
-                    <button (click)="connect()" class="btn btn-default" type="submit" [disabled]="isConnected">Connect</button>
-                    <button (click)="disconnect()" class="btn btn-default" type="submit" [disabled]="!isConnected">Disconnect
+                    <button *ngIf="!isConnected" (click)="connect()" class="btn btn-success" type="submit">Connect</button>
+                    <button *ngIf="isConnected" (click)="disconnect()" class="btn btn-danger" type="submit">Disconnect
                     </button>
                 </div>
             </form>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-10">
             <form class="form-inline">
-                <div class="form-group">
+                <div class="form-group" *ngIf="isConnected">
                     <label for="name">Message</label>
                     <input type="text" [(ngModel)]="message" class="form-control" name="message"> <br>
                 </div>
-                <button (click)="sendMessage()" class="btn btn-warning" type="submit" [disabled]="!isConnected">Send</button>
+                <button *ngIf="isConnected" (click)="sendMessage()" class="btn btn-success" type="submit" [disabled]="!isConnected">Send</button>
             </form>
         </div>
         <ul>
@@ -33,8 +29,3 @@
     </div>
    
 </div>
-
-
-  <!-- <router-outlet></router-outlet> -->
-
-  <!-- <p>Chats works!!</p> -->
