--- a/src/app/pm-portal/tasks/task-details/task-details.component.html
+++ b/src/app/pm-portal/tasks/task-details/task-details.component.html
@@ -1,16 +1,9 @@
 
-<div class="row">
-
-    <div class="col-md-12">
-        <router-outlet></router-outlet>
-    </div>
-
+<div class="row col-md-12 fit-panel-width">
+    <router-outlet></router-outlet>
 </div>
 
-<div class="row">
-
-    <div class="col-md-12">
-        <app-task-events-list></app-task-events-list>
-    </div>
-
+<div class="row col-md-12">
+    <app-task-events-list></app-task-events-list>
 </div>
+
