--- a/src/app/pm-portal/tasks/task-details/task-item-edit/task-item-edit.component.css
+++ b/src/app/pm-portal/tasks/task-details/task-item-edit/task-item-edit.component.css
@@ -1,3 +1,7 @@
 input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched {
     border: 1px solid red;
-}  
+}
+
+.fit-panel-width {
+    width: 75vw;
+}
