--- a/src/app/pm-portal/tasks/task-details/task-item-edit/task-item-edit.component.html
+++ b/src/app/pm-portal/tasks/task-details/task-item-edit/task-item-edit.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row fit-panel-width">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       
       <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
