Added Task.priority property

--- a/src/app/pm-portal/tasks/task-details/task-item-detail/task-item-detail.component.html
+++ b/src/app/pm-portal/tasks/task-details/task-item-detail/task-item-detail.component.html
@@ -30,4 +30,11 @@
             <p>{{currentTask.status.description}}</p>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <p>{{currentTask.priority.level}}</p>
+        </div>
+    </div>
+
 </div>
