--- a/src/app/pm-portal/tasks/task-details/task-details.component.html
+++ b/src/app/pm-portal/tasks/task-details/task-details.component.html
@@ -1,9 +1,4 @@
 
-<div class="row col-md-12 fit-panel-width">
+<div class="row col-md-12 fit-panel-width list-group-item margin-1mm">
     <router-outlet></router-outlet>
 </div>
-
-<div class="row col-md-12">
-    <app-task-events-list></app-task-events-list>
-</div>
-
