--- a/src/app/pm-portal/tasks/task-details/task-item-add/task-item-add.component.html
+++ b/src/app/pm-portal/tasks/task-details/task-item-add/task-item-add.component.html
@@ -1,1 +1,5 @@
-<p>task-item-add works!</p>
+<div class="row pmp-compact fit-half-panel-width list-group-item">
+    <div class="col-md-12">
+        <p>task-item-add works! This is a placeholder - Content to be added shortly!</p>
+    </div>
+</div>
