--- a/src/app/pm-portal/tasks/task-details/task-item-detail/task-item-detail.component.html
+++ b/src/app/pm-portal/tasks/task-details/task-item-detail/task-item-detail.component.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 
-<div class="fit-half-panel-width pmp-compact" *ngIf="currentTask">
+<div class="pmp-compact fit-half-panel-width list-group-item" *ngIf="currentTask">
     <div class="row" >
         <div class="col-md-12 clearfix">
             <button class="btn btn-info float-right btn-sm" (click)="onAddTask()">Add Task</button>
