--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,19 @@
   color: white;
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.redbox {
+  border: solid 1px red;
+}
+
+.bluebox {
+  border: solid 1px blue;
+}
+
+.greybox {
+  border: solid 1px lightgray;
+}
