--- a/src/app/pm-portal/tasks/task-details/task-details.component.html
+++ b/src/app/pm-portal/tasks/task-details/task-details.component.html
@@ -1,4 +1,4 @@
 
-<div class="row col-md-12 fit-panel-width list-group-item margin-1mm">
+<div class="row col-md-12 fit-panel-width margin-1mm">      <!-- list-group-item  -->
     <router-outlet></router-outlet>
 </div>
