--- a/src/app/pm-portal/header/header.component.html
+++ b/src/app/pm-portal/header/header.component.html
@@ -1,16 +1,16 @@
 <!-- **************** MAIN MENU-BAR OPTIONS **************** -->
 
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark sticky-top redbox">
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark sticky-top">
 
   <div class="col-md-6">
-      <ul class="navbar-nav greybox">
+      <ul class="navbar-nav">
 
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
           Projects
         </a>
         <div class="dropdown-menu" >
-          <a class="dropdown-item" *ngFor="let project of projects | async"  (click)="onProjectSelected(project)">{{project.name}}</a>
+          <a class="dropdown-item" *ngFor="let project of projects | async"  (click)="onProjectSelected(project)">{{project.name  | slice:0:75 }}<span *ngIf="project.name.length > 75"> ...</span></a>
         </div>
       </li>
 
@@ -42,25 +42,25 @@
     
   </div>
 
-  <div class="col-md-3 bluebox">
-    <ul class="navbar-nav greybox">
-      <li class="redbox" style="vertical-align: middle; text-align: center;" *ngIf="isAuthenticated">
-          <div style="padding-left: 50px; font-size:smaller; vertical-align: middle; color: white;" *ngIf="!selectedProject">No Project currently selected!</div>
-          <div style="padding-left: 50px; font-size:smaller; vertical-align: middle; color: white;" *ngIf="selectedProject">Current Project: <b>{{ selectedProject.name }}</b></div>
+  <div class="col-md-3">
+    <ul class="navbar-nav" style="width: 100%;">
+      <li class="centered-full-width" *ngIf="isAuthenticated">
+          <div class="sml-white-text" *ngIf="!selectedProject"><b>No Project Selected!</b></div>
+          <div class="sml-white-text" *ngIf="selectedProject"><b>{{ selectedProject.name | slice:0:75 }}</b><span *ngIf="selectedProject.name.length > 75"> ...</span></div>
       </li>
     </ul>
   </div>
 
-  <div class="col-md-2 redbox">
-    <ul class="navbar-nav greybox">
-      <li class="greybox" style="vertical-align: middle; text-align: center;" *ngIf="isAuthenticated">
-        <div style="font-size:smaller;color: white;">Welcome {{ authenticatedUser.name }}</div>
+  <div class="col-md-2">
+    <ul class="navbar-nav" style="width: 100%;">
+      <li class="centered-full-width" *ngIf="isAuthenticated">
+        <div class="sml-white-text">Welcome {{ authenticatedUser.name }}</div>
     </li>
   </ul>
 </div>
 
-  <div class="col-md-1 bluebox">
-    <ul class="navbar-nav navbar-right greybox">
+  <div class="col-md-1">
+    <ul class="navbar-nav navbar-right">
       <li *ngIf="!isAuthenticated">
         <a class="nav-link" routerLinkActive="active" routerLink="/login">Login</a>
       </li>
