--- a/src/app/pm-portal/tasks/task-details/task-item-edit/task-item-edit.component.html
+++ b/src/app/pm-portal/tasks/task-details/task-item-edit/task-item-edit.component.html
@@ -5,98 +5,100 @@
 
       <!-- Project -->
       <div class="form-group">
-        <label for="projectId">Project</label>
-        <select name="projectId" formControlName="projectId" class="form-control">
+        <label class="small font-weight-bold" for="projectId">Project</label>
+        <select name="projectId" formControlName="projectId" class="form-control form-control-sm" placeholder="Project" >
           <option [ngValue]="null" disabled>Choose Project</option>
           <option *ngFor="let project of allProjects" [ngValue]="project.id">
             {{ project.name  | slice:0:50 }}<span *ngIf="project.name.length > 50"> ...</span>
           </option>
         </select>
-        <span class="help-block" 
+        <span class="help-block alert-warning" 
           *ngIf="!taskForm.get('projectId').valid && taskForm.get('projectId').touched" >
           Please select a valid Project!</span>
       </div>
 
       <!-- Title -->
       <div class="form-group">
-        <label for="text">Title</label>
-        <textarea id="text" formControlName="text" class="form-control">
+        <label class="small font-weight-bold" for="text">Title</label>
+        <textarea id="text" formControlName="text" class="form-control form-control-sm" placeholder="Enter a title for this task up to 1000 characters in length">
         </textarea>
-        <span class="help-block" 
+        <span class="help-block alert-warning" 
           *ngIf="!taskForm.get('text').valid && taskForm.get('text').touched" >
           Please enter a valid title text!</span>
       </div>
 
       <!-- Description -->
       <div class="form-group">
-        <label for="description">Description</label>
-        <textarea id="description" [formControlName]="['description']" class="form-control">
+        <label class="small font-weight-bold" for="description">Description</label>
+        <textarea id="description" [formControlName]="['description']" 
+          class="form-control form-control-sm" 
+          placeholder="Enter a description of this task up to 10,000 characters in length">
         </textarea>
         <span *ngIf="!taskForm.get('description').valid && taskForm.get('description').touched"
-          class="help-block">Please enter a valid description!</span>
+          class="help-block alert-warning">Please enter a valid description!</span>
       </div>
 
       <!-- Status -->
       <div class="form-group">
-        <label for="status">Status</label>
-        <select name="status" formControlName="status" class="form-control">
+        <label class="small font-weight-bold" for="status">Status</label>
+        <select name="status" formControlName="status" class="form-control form-control-sm" placeholder="Status">
           <option [ngValue]="null" disabled>Choose Status</option>
           <option *ngFor="let status of allStatus" [ngValue]="status.id">
             {{ status.description }}
           </option>
         </select>
-        <span *ngIf="!taskForm.get('status').valid && taskForm.get('status').touched" class="help-block">Please enter a
+        <span *ngIf="!taskForm.get('status').valid && taskForm.get('status').touched" class="help-block alert-warning">Please enter a
           valid status!</span>
       </div>
 
       <!-- Priority -->
       <div class="form-group">
-        <label for="priority">Priority</label>
-        <select name="priority" formControlName="priority" class="form-control">
+        <label class="small font-weight-bold" for="priority">Priority</label>
+        <select name="priority" formControlName="priority" class="form-control form-control-sm" placeholder="Priority">
           <option [ngValue]="null" disabled>Choose Priority</option>
           <option *ngFor="let priority of allPriorities" [ngValue]="priority.id">
             {{ priority.level }}
           </option>
         </select>
-        <span *ngIf="!taskForm.get('priority').valid && taskForm.get('priority').touched" class="help-block">Please
+        <span *ngIf="!taskForm.get('priority').valid && taskForm.get('priority').touched" class="help-block alert-warning">Please
           enter a valid priority!</span>
       </div>
 
       <!-- Start Date -->
       <div class="form-group">
-        <label for="start_date">Start Date</label>
+        <label class="small font-weight-bold" for="start_date">Start Date</label>
         <div class="clearfix">
-        <input matInput [matDatepicker]="start_date" [formControlName]="['start_date']" class="form-control float-left" style="width: 92%;" placeholder="Choose a date">
+        <input matInput [matDatepicker]="start_date" [formControlName]="['start_date']" class="form-control float-left form-control-sm" style="width: 92%;" placeholder="Start Date">
         <mat-datepicker-toggle matSuffix [for]="start_date" class="float-right"></mat-datepicker-toggle>
         <mat-datepicker #start_date startView="month" ></mat-datepicker>
         </div>
         <span *ngIf="!taskForm.get('start_date').valid && taskForm.get('start_date').touched"
-          class="help-block">Please enter a valid Start Date!</span>
+          class="help-block alert-warning">Please enter a valid Start Date!</span>
       </div>
 
       <!-- Progress -->
       <div class="form-group">
-        <label for="description">Progress</label>
-        <mat-slider #progressSlider class="form-control" [formControlName]="['progress']" 
+        <label class="small font-weight-bold" for="description">Progress</label>
+        <mat-slider #progressSlider class="form-control form-control-sm" [formControlName]="['progress']" aria-placeholder="Progress"
           min="0" max="1" step="0.05" thumbLabel="true" [displayWith]="formatProgressLabel(someProperty)" 
           (change)="onProgressSliderChanged(progressSlider.value)">
         </mat-slider>
         <span *ngIf="!taskForm.get('progress').valid && taskForm.get('progress').touched"
-          class="help-block">Please enter a valid Progess value!</span>
+          class="help-block alert-warning">Please enter a valid Progess value!</span>
       </div>
 
       <!-- Duration -->
       <div class="form-group">
-        <label for="duration">Duration (in days)</label>
-        <input id="duration" type="text" [formControlName]="['duration']" class="form-control">
+        <label class="small font-weight-bold" for="duration">Duration (in days)</label>
+        <input id="duration" type="number" [formControlName]="['duration']" class="form-control form-control-sm" placeholder="Duration (in days)">
         <span *ngIf="!taskForm.get('duration').valid && taskForm.get('duration').touched"
-          class="help-block">Please enter a valid Duration value!</span>
+          class="help-block alert-warning">Please enter a valid Duration value!</span>
       </div>
 
       <!-- Parent Task -->
       <div class="form-group">
-        <label for="parent">Parent Task</label>
-        <select name="parent" formControlName="parent" class="form-control">
+        <label class="small font-weight-bold" for="parent">Parent Task</label>
+        <select name="parent" formControlName="parent" class="form-control form-control-sm" placeholder="Parent Task">
           <option [ngValue]="null">No Parent Task</option>
           <option *ngFor="let task of allTasks" [ngValue]="task.id">
             {{ task.text }}
