Removed Gantt to Scheduling, Added ngx-chart smpls

--- a/src/app/pm-portal/analysis/analysis.component.html
+++ b/src/app/pm-portal/analysis/analysis.component.html
@@ -1,1 +1,17 @@
-<gantt></gantt>
+<div class="row col-md-12">      <!-- list-group-item  -->
+
+    <ul class="list-inline">
+        <li class="list-inline-item nav-item">
+            <a routerLink="/projects/analysis/number-card-chart" class="nav-link" routerLinkActive="active">Number Card Chart</a>
+        </li>
+        <li class="list-inline-item nav-item">
+            <a routerLink="/projects/analysis/horizontal-bar-chart" class="nav-link" routerLinkActive="active">Horizontal Bar Chart</a>
+        </li>
+
+    </ul>
+
+</div>
+
+<div>
+    <router-outlet></router-outlet>
+</div>
