--- a/src/app/pm-portal/header/header.component.html
+++ b/src/app/pm-portal/header/header.component.html
@@ -19,7 +19,7 @@
       </li>
 
       <li class="nav-item">
-        <a routerLink="/projects/task-deps" class="nav-link" routerLinkActive="active">Dependencies</a>
+        <a routerLink="/projects/task-schedule" class="nav-link" routerLinkActive="active">Scheduling</a>
       </li>
 
       <li class="nav-item">
