--- a/src/app/pm-portal/tasks/task-details/task-events-list/task-events-list.component.html
+++ b/src/app/pm-portal/tasks/task-details/task-events-list/task-events-list.component.html
@@ -1,7 +1,7 @@
 <div class=" clearfix">
     <div class="row">
         <div class="col-md-12">
-            <button class="btn btn-primary btn-sm float-right" (click)="onAddEvent()">Add Comment</button>
+            <button class="btn btn-primary btn-sm float-right" (click)="onAddCommentEvent()">Add Comment</button>
             <p class="small-pad-left float-right"></p>
             <button class="btn btn-primary btn-sm float-right" (click)="onAddEvent()">Add File</button>
         </div>
