Integrated SVB Chart with REST api for data

--- a/src/app/pm-portal/analysis/analysis.component.html
+++ b/src/app/pm-portal/analysis/analysis.component.html
@@ -2,14 +2,27 @@
 
     <ul class="list-inline">
         <li class="list-inline-item nav-item">
-            <a routerLink="/projects/analysis/number-card-chart" class="nav-link" routerLinkActive="active">Number Card Chart</a>
+            <a routerLink="/projects/analysis/stacked-vertical-bar-chart" 
+                class="nav-link" routerLinkActive="active">
+                    Task Status Analysis
+            </a>
         </li>
+
         <li class="list-inline-item nav-item">
-            <a routerLink="/projects/analysis/horizontal-bar-chart" class="nav-link" routerLinkActive="active">Horizontal Bar Chart</a>
+            <a routerLink="/projects/analysis/number-card-chart" 
+                class="nav-link" routerLinkActive="active">
+                    Number Card Chart
+            </a>
         </li>
 
+        <li class="list-inline-item nav-item">
+            <a routerLink="/projects/analysis/horizontal-bar-chart" 
+                class="nav-link" routerLinkActive="active">
+                    Horizontal Bar Chart
+            </a>
+        </li>
+        
     </ul>
-
 </div>
 
 <div>
