--- a/src/app/pm-portal/tasks/task-details/task-item-comment/task-item-comment.component.html
+++ b/src/app/pm-portal/tasks/task-details/task-item-comment/task-item-comment.component.html
@@ -20,7 +20,10 @@
                 </span>
             </div>
 
-            <button class="btn btn-primary" type="submit">Submit</button>
+            <div class="btn-group-sm">
+                <button class="btn btn-primary btn-sm" type="submit" [disabled]="!taskForm.valid">Submit</button>
+                <button class="btn btn-warning btn-sm"  style="margin-left: 5px;" (click)="onCancel()">Cancel</button>
+            </div>
 
         </form>
 
