--- a/src/app/pm-portal/header/header.component.html
+++ b/src/app/pm-portal/header/header.component.html
@@ -5,13 +5,8 @@
   <div class="col-md-6">
       <ul class="navbar-nav">
 
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-          Projects
-        </a>
-        <div class="dropdown-menu" >
-          <a class="dropdown-item" *ngFor="let project of projects | async"  (click)="onProjectSelected(project)">{{project.name  | slice:0:75 }}<span *ngIf="project.name.length > 75"> ...</span></a>
-        </div>
+      <li class="nav-item">
+        <a routerLink="/projects/projects" class="nav-link" routerLinkActive="active">Projects</a>
       </li>
 
       <li class="nav-item">
@@ -31,10 +26,6 @@
       </li>
 
       <li class="nav-item">
-        <a routerLink="/projects/mentions" class="nav-link" routerLinkActive="active">Mentions</a>
-      </li>
-
-      <li class="nav-item">
         <a routerLink="/projects/analysis" class="nav-link" routerLinkActive="active">Analysis</a>
       </li>
 
@@ -42,15 +33,21 @@
     
   </div>
 
+  <!-- Projects dropdown -->
   <div class="col-md-3">
     <ul class="navbar-nav" style="width: 100%;">
       <li class="centered-full-width" *ngIf="isAuthenticated">
-          <div class="sml-white-text" *ngIf="!selectedProject"><b>No Project Selected!</b></div>
-          <div class="sml-white-text" *ngIf="selectedProject"><b>{{ selectedProject.name | slice:0:75 }}</b><span *ngIf="selectedProject.name.length > 75"> ...</span></div>
+          <select id="selected" name="selected" [(ngModel)]="selected" #mySelect class="form-control form-control-sm sml-black-text" (change)="onProjectSelected($event)">
+            <option [ngValue]="null" [disabled]="true">No Project Selected!</option>
+            <option *ngFor="let project of projects | async" [ngValue]="project.id" value="{{project.id}}"  selected="selectedProject.id === project.id" >
+              {{ project.name  | slice:0:75 }}<span *ngIf="project.name.length > 75"> ...</span>
+            </option>
+          </select>
       </li>
     </ul>
   </div>
 
+  <!-- Username display -->
   <div class="col-md-2">
     <ul class="navbar-nav" style="width: 100%;">
       <li class="centered-full-width" *ngIf="isAuthenticated">
@@ -59,6 +56,7 @@
   </ul>
 </div>
 
+<!-- Login/Logout button -->
   <div class="col-md-1">
     <ul class="navbar-nav navbar-right">
       <li *ngIf="!isAuthenticated">
