--- a/src/app/pm-portal/tasks/task-details/task-item-edit/task-item-edit.component.html
+++ b/src/app/pm-portal/tasks/task-details/task-item-edit/task-item-edit.component.html
@@ -7,7 +7,7 @@
       <div class="form-group">
         <label class="small font-weight-bold" for="projectId">Project</label>
         <select name="projectId" formControlName="projectId" class="form-control form-control-sm" placeholder="Project" >
-          <option [ngValue]="null" disabled>Choose Project</option>
+          <option [ngValue]="null" [disabled]="true">Choose Project</option>
           <option *ngFor="let project of allProjects" [ngValue]="project.id">
             {{ project.name  | slice:0:50 }}<span *ngIf="project.name.length > 50"> ...</span>
           </option>
@@ -42,7 +42,7 @@
       <div class="form-group">
         <label class="small font-weight-bold" for="status">Status</label>
         <select name="status" formControlName="status" class="form-control form-control-sm" placeholder="Status">
-          <option [ngValue]="null" disabled>Choose Status</option>
+          <option [ngValue]="null" [disabled]="true">Choose Status</option>
           <option *ngFor="let status of allStatus" [ngValue]="status.id">
             {{ status.description }}
           </option>
@@ -55,7 +55,7 @@
       <div class="form-group">
         <label class="small font-weight-bold" for="priority">Priority</label>
         <select name="priority" formControlName="priority" class="form-control form-control-sm" placeholder="Priority">
-          <option [ngValue]="null" disabled>Choose Priority</option>
+          <option [ngValue]="null" [disabled]="true">Choose Priority</option>
           <option *ngFor="let priority of allPriorities" [ngValue]="priority.id">
             {{ priority.level }}
           </option>
@@ -68,9 +68,9 @@
       <div class="form-group">
         <label class="small font-weight-bold" for="start_date">Start Date</label>
         <div class="clearfix">
-        <input matInput [matDatepicker]="start_date" [formControlName]="['start_date']" class="form-control float-left form-control-sm" style="width: 92%;" placeholder="Start Date">
-        <mat-datepicker-toggle matSuffix [for]="start_date" class="float-right"></mat-datepicker-toggle>
-        <mat-datepicker #start_date startView="month" ></mat-datepicker>
+        <input matInput [matDatepicker]="start_date" [formControlName]="['start_date']" class="form-control float-left form-control-sm" style="width: 92%;" placeholder="Start Date" (focus)="start_date.open()">
+        <mat-datepicker-toggle matPrefix [for]="start_date" class="float-right"></mat-datepicker-toggle>
+        <mat-datepicker #start_date startView="month" disabled="false"></mat-datepicker>
         </div>
         <span *ngIf="!taskForm.get('start_date').valid && taskForm.get('start_date').touched"
           class="help-block alert-warning">Please enter a valid Start Date!</span>
@@ -106,8 +106,11 @@
         </select>
       </div>
 
-      <!-- Submit Button -->
-      <button class="btn btn-primary" type="submit">Submit</button>
+      <!-- Submit/Cancel Buttons -->
+      <div class="btn-group-sm">
+        <button class="btn btn-primary btn-sm" type="submit" [disabled]="!taskForm.valid">Submit</button>
+        <button class="btn btn-warning btn-sm"  style="margin-left: 5px;" (click)="onCancel()">Cancel</button>
+      </div>
 
     </form>
   </div>
